feat: add distribution profile and scripts for JPackage application